<resources>
    <string name="instagram">Instagram</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="thanks">Thanks!</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="see_more">See More</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="report_inappropriate">Report</string>
    <string name="report_comment">Report Comment</string>
    <string name="report_option_dialog_title">Choose a reason for reporting this:</string>
    <string name="report_option_dialog_title_for_post">Choose a reason for reporting this post:</string>
    <string name="report_option_dialog_title_for_profile">Choose a reason for reporting this profile:</string>
    <string name="report_option_dialog_title_for_hide_ad">Why did you hide the ad?</string>
    <string name="report_option_spam">"It's spam"</string>
    <string name="report_option_inappropriate">"It's inappropriate"</string>
    <string name="report_options">Report…</string>
    <string name="reported">Reported</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_im_sure">"Yes, I'm sure"</string>
    <string name="loading">Loading…</string>
    <string name="sending">Sending…</string>
    <string name="dismiss">Dismiss</string>
    <string name="failed">Failed</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="unknown_error_occured">An unknown error occurred</string>
    <string name="network_error">An unknown network error has occurred.</string>
    <string name="security_exception">Please turn on Internet Permission.</string>
    <string name="request_error">"Sorry, we couldn't complete your request. Please try again in a moment."</string>
    <string name="could_not_refresh_feed">"Couldn't refresh feed"</string>
    <string name="showing_offline_feed_cache">"Couldn't refresh feed. Last updated %1$s."</string>
    <string name="showing_offline_list_cache">"Couldn't refresh list. Last updated %1$s."</string>
    <string name="feed_no_network_error">No network connection.</string>
    <string name="tap_to_refresh">Tap to Refresh</string>
    <string name="learn_more">Learn More</string>
    <string name="changes_saved">Changes saved</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="fail_confirm_email">"We can't confirm your email right now. Try again later."</string>
    <string name="fail_send_confirm_email">"We can't send you a confirmation email right now. Try again later."</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="next_caps">NEXT</string>
    <string name="user_options">Options</string>
    <string name="menu_options">Options</string>
    <string name="share">Share</string>
    <string name="share_username">Share Username</string>
    <string name="info">Info</string>
    <string name="posts">posts</string>
    <string name="allow">Allow</string>
    <string name="view_profile">View Profile</string>
    <string name="photo">Photo</string>
    <string name="see_all">See All</string>
    <string name="user_and_x_more">%1$s and %2$d more</string>
    <string name="confirm">Confirm</string>
    <string name="hide">Hide</string>
    <string name="empty_photos">No photos to show</string>
    <string name="private_account">Private Account</string>
    <string name="reset_logout_are_you_sure">Do you want to logout the existing account?</string>
    <string name="direct_send">Send</string>
    <string name="feedback_required_report_problem_toast">Thanks for reporting this problem.</string>
    <string name="player_service_disconnected">Video player service disconnected</string>
    <string name="one_tap_upsell_text">Remember my login info</string>
    <string name="see_all_followers">See All Followers</string>
    <string name="tombstone_title">"Why don't you want to see this ad?"</string>
    <string name="tombstone_thanks">Thanks for letting us know.</string>
    <string name="tombstone_feedback">Your feedback improves the quality of ads on Instagram.</string>
    <string name="language">Language</string>
    <string name="select_your_language">Select your language</string>
    <string name="report_thanks">Thanks for reporting this</string>
    <string name="tombstone_report_thanks">Thanks for reporting this post</string>
    <string name="tombstone_report_feedback">Your feedback is important in helping us keep the Instagram community safe.</string>
    <string name="tombstone_show_post">Show Post</string>
    <string name="tombstone_undo">Undo</string>
    <string name="tombstone_report">Report</string>
    <string name="tombstone_report_user_thanks">Thanks for reporting this profile</string>
    <string name="tombstone_show_profile">Show Profile</string>
    <string name="tombstone_reported_profile_is_blocked">Because you reported %1$s as spam, we’ve also blocked the account.</string>
    <string name="report_thanks_toast_msg">Thanks for reporting this post</string>
    <string name="report_thanks_toast_msg_live_video">Thanks for reporting this live video</string>
    <string name="report_thanks_toast_msg_ads">Thanks for the feedback</string>
    <string name="thank_you_toast_msg">Thank you.</string>
    <string name="see_fewer_posts_like_this">See Fewer Posts Like This</string>
    <string name="see_fewer_posts_like_this_toast">"This post has been hidden. We'll show fewer posts like this from now on."</string>
    <string name="hidden_media_toast">You chose to see fewer posts like this.</string>
    <string name="see_fewer_posts_like_this_tombstone_feedback">"From now on, we'll try to show you fewer posts like this."</string>
    <string name="see_fewer_channels_like_this">See Fewer Channels Like This</string>
    <string name="posts_plural">%1$s public posts</string>
    <string name="posts_plural_titlecase">%1$d Posts</string>
    <string name="posts_singular">%1$s public post</string>
    <string name="view_count_plural">%1$s views</string>
    <string name="views">Views</string>
    <string name="no_views_yet">No views yet</string>
    <string name="view_count_singular">%1$s view</string>
    <string name="number_of_people_who_like_this_photo">%1$s likes</string>
    <string name="number_of_people_who_like_this_photo_singular">%1$s like</string>
    <string name="reach_count_plural">%1$s reaches</string>
    <string name="reach_count_singular">%1$s reach</string>
    <string name="comment_count_plural">%1$s comments</string>
    <string name="comment_count_singular">%1$s comment</string>
    <string name="see_translation">SEE TRANSLATION</string>
    <string name="see_original">SEE ORIGINAL</string>
    <string name="loading_translation">TRANSLATING…</string>
    <string name="translation_fail">"Sorry, we couldn't translate this. Try again in a minute."</string>
    <string name="home_description">Home</string>
    <string name="activity_description">Activity</string>
    <string name="camera_description">Camera</string>
    <string name="gallery_description">Gallery</string>
    <string name="explore_description">Search and Explore</string>
    <string name="profile_description">Profile</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="profile_grid_description">Grid View</string>
    <string name="profile_list_description">List View</string>
    <string name="profile_tagged_description">Photos of You</string>
    <string name="profile_save_home_description">Saved Posts</string>
    <string name="discover_new_people_description">Discover new people to follow</string>
    <string name="image_description">Photo from %1$s</string>
    <string name="video_description">Video from %1$s</string>
    <string name="grid_photo">Photo Thumbnail at Row %1$d, Column %2$d</string>
    <string name="grid_video">Video Thumbnail at Row %1$d, Column %2$d</string>
    <string name="carousel_story_description">"%1$s's story at column %2$d"</string>
    <string name="message">Message</string>
    <string name="camera">Camera</string>
    <string name="album_thumbnails">Album Thumbnail Preview</string>
    <string name="photo_thumbnail">Photo Thumbnail</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="newsfeed_story_photo_n_of_m_thumbnail">Photo Thumbnail %1$d of %2$d</string>
    <string name="newsfeed_story_photo_thumbnail">Photo Thumbnail</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="unlike">Unlike</string>
    <string name="liked">Liked</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="approve">Approve</string>
    <string name="optional">optional</string>
    <string name="sharing_disabled">Sharing Disabled</string>
    <string name="logging_in">Logging In...</string>
    <string name="logging_out">Logging out…</string>
    <string name="double_tap_to_like_hint">Tip: Double-tap on posts to like them!</string>
    <string name="no_users_found">No users found.</string>
    <string name="search_for_x">Search for \"%1$s\"</string>
    <string name="searching">Searching…</string>
    <string name="must_be_logged_in">You must log in to view this item.</string>
    <string name="no_posts_yet_self_fragment">Start capturing and sharing your moments</string>
    <string name="post_deleted">This post has been deleted</string>
    <string name="copy_profile_url">Copy Profile URL</string>
    <string name="copy_profile_url_confirmation">"This user's sharable profile link has been copied to the clipboard."</string>
    <string name="and">and</string>
    <string name="convert_to_business">Convert to business</string>
    <string name="business_conversion_nux">Get insights about your followers with new business tools.</string>
    <string name="feed_business_conversion_icon_nux">"Try out Instagram's new Business Tools."</string>
    <string name="promote">Promote</string>
    <string name="promotions">Promotions</string>
    <string name="insights_explanation">What do these mean?</string>
    <string name="saved">Saved</string>
    <string name="saved_explanation">The number of unique accounts that saved your post.</string>
    <string name="impressions">Impressions</string>
    <string name="impressions_explanation">The total number of times your post has been seen.</string>
    <string name="reach">Reach</string>
    <string name="reach_explanation">The number of unique accounts that have seen your post.</string>
    <string name="engagement">Engagement</string>
    <string name="engagement_explanation">The number of likes and comments on your post.</string>
    <string name="edit">Edit</string>
    <string name="rotate">Rotate</string>
    <string name="your_story_button_text">Your Story</string>
    <string name="save_button_text">Save</string>
    <string name="mute_video">Mute Volume</string>
    <string name="add_text">Add Text</string>
    <string name="draw">Draw</string>
    <string name="link">Link</string>
    <string name="asset">Emojis and Stickers</string>
    <string name="weblink_enter_url">Enter Link</string>
    <string name="weblink_description">People who see your story can swipe up to go to this page.</string>
    <string name="weblink_preview_link">Preview Link</string>
    <string name="fb_connect_card_button_text">Connect</string>
    <string name="fb_connect_card_main_text">Connect Facebook</string>
    <string name="fb_connect_card_subtitle_text">Improve the suggestions you see.</string>
</resources>