<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/black_90_transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_gravity="center|left|top" android:id="@id/weblink_cancel" android:paddingLeft="@dimen/quick_capture_top_button_padding" android:paddingRight="@dimen/quick_capture_top_button_padding" android:paddingBottom="@dimen/quick_capture_top_button_padding" android:layout_width="wrap_content" android:layout_height="@dimen/quick_capture_top_button_height" android:text="@string/cancel" style="@style/Widget.TextView.Capture.Shadow" />
        <TextView android:textStyle="bold" android:gravity="center" android:layout_gravity="center|right|top" android:id="@id/weblink_done" android:paddingLeft="@dimen/quick_capture_top_button_padding" android:paddingRight="@dimen/quick_capture_top_button_padding" android:paddingBottom="@dimen/quick_capture_top_button_padding" android:layout_width="wrap_content" android:layout_height="@dimen/quick_capture_top_button_height" android:text="@string/done" style="@style/Widget.TextView.Capture.Shadow" />
    </FrameLayout>
    <EditText android:textColor="@color/white" android:textColorHint="@color/grey_7_whiteout" android:id="@id/weblink_url" android:paddingLeft="@dimen/weblink_text_left_padding" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:layout_marginLeft="@dimen/weblink_content_horizontal_margin" android:layout_marginTop="80.0dip" android:layout_marginRight="@dimen/weblink_content_horizontal_margin" android:hint="@string/weblink_enter_url" android:singleLine="true" android:inputType="textUri" />
    <TextView android:textColor="@color/grey_5_whiteout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/weblink_content_horizontal_margin" android:layout_marginTop="30.0dip" android:layout_marginRight="@dimen/weblink_content_horizontal_margin" android:text="@string/weblink_description" />
    <TextView android:textColor="@color/grey_5_whiteout" android:id="@id/weblink_preview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/weblink_content_horizontal_margin" android:layout_marginTop="@dimen/weblink_content_top_margin" android:layout_marginRight="@dimen/weblink_content_horizontal_margin" android:text="@string/weblink_preview_link" />
</LinearLayout>