<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:paddingTop="@dimen/card_padding" android:paddingBottom="@dimen/card_padding" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="@dimen/card_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/fb_connect_card_container" android:background="@drawable/card_background" android:padding="@dimen/card_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/fb_connect_card_logo" android:src="@drawable/fb_connect" android:tint="@color/facebook_logo_blue" style="@style/Avatar.ExtraExtraLarge" />
        <TextView android:textSize="@dimen/font_medium" android:textColor="@color/grey_9_whiteout" android:gravity="center_horizontal" android:id="@id/fb_connect_card_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_text_padding" android:layout_marginBottom="@dimen/card_text_padding_small" android:text="@string/fb_connect_card_main_text" android:singleLine="true" android:includeFontPadding="false" />
        <TextView android:textSize="@dimen/font_small" android:textColor="@color/grey_5_whiteout" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/fb_connect_card_context" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/card_text_padding" android:text="@string/fb_connect_card_subtitle_text" android:lines="2" android:includeFontPadding="false" />
        <com.instagram.ui.text.TitleTextView android:id="@id/fb_connect_connect_button" android:layout_width="fill_parent" android:layout_height="@dimen/follow_button_height" android:text="@string/fb_connect_card_button_text" style="?attr/primaryButtonStyle" />
    </LinearLayout>
    <com.instagram.common.ui.colorfilter.ColorFilterAlphaImageView android:layout_gravity="center|right|top" android:id="@id/dismiss_button" android:padding="@dimen/card_close_button_padding" android:layout_width="@dimen/card_close_button_size" android:layout_height="@dimen/card_close_button_size" android:src="@drawable/nav_cancel" android:contentDescription="@string/dismiss" app:normal="@color/grey_light" app:active_alpha="0x00000080" />
</FrameLayout>